prometheus-server/prometheus-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: prometheus
  namespace: prometheus-ns
spec:
  to:
    kind: Service
    name: prometheus-operated
    weight: 100
  port:
    targetPort: web
